fix/Align Layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,32 @@
 .container-header{
     background-color: #222222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-header nav{
+    margin: 0 50px;
+    width: 900px;
 }
 
 .container-body{
     background-color: #161513;
-    height: 100vh;
-    display: block;
-    scroll-behavior: smooth;
-}
-
-.container-body > div{
-    padding-bottom: 100px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* scroll-behavior: smooth; */
 }
 
 .container-body > div:first-child{
     padding-top: 150px;
+    padding-bottom: 200px;
+}
+
+.container-body > div{
+    padding-bottom: 100px;
+    margin: 0 50px;
+    width: 900px;
 }
