--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -5,8 +5,15 @@
     padding: 90px 0 60px 0;
 }
 
-.home-image img{
-    border-radius: 50%;
+.home-image-frame{
+    max-width: 250px;
+    overflow: hidden;
+}
+
+.home-image-frame img{
+    width: 100%;
+    height: 100%;
+    border-radius: 99em;
 }
 
 .home-content{
